--- a/fingerfood/style/style.css
+++ b/fingerfood/style/style.css
@@ -31,14 +31,15 @@ img, video {
 h1 {
 		color:#6D688B;
 		font-family: "Lora", serif;
-		font-size: 6vmin;
+		font-size: 2.5em;
+		line-height: 30pt;
     margin:120px 0 60px 0;
 }
 
 h2 {
 		color:#FF5181;
     font-family:"Karla", sans-serif;
-		font-size:4vmin;
+		font-size:2em;
     margin:20px 0 20px 0;
 		text-transform: capitalize;
 }
@@ -46,7 +47,7 @@ h2 {
 h3 {
 		color:#FF5181;
 		font-family:"Karla", sans-serif;
-    font-size:3vmin;
+    font-size:1em;
 		font-weight:700;
     margin-bottom:20px;
 		text-transform: uppercase;
@@ -90,4 +91,10 @@ p {
 		margin-right:auto;
 		margin-top: 0px;
 		width:40%;
+}
+
+@media only screen and (max-width: 1020px) {
+	body {
+		width:80%;
+	}
 }
