--- a/fingerfood/style/style.css
+++ b/fingerfood/style/style.css
@@ -97,4 +97,19 @@ p {
 	body {
 		width:80%;
 	}
+	
+	img, video {
+		border-radius: 8px;
+		box-shadow: 0px 10px 15px rgba(0,0,0,0.1);
+		display:block;
+    		margin:0 auto;
+		margin-bottom:60px;
+		left:0%;
+		position:relative;
+		width:100%;
+	}
+	
+	h1 {
+		size:4em;
+	}
 }
