--- a/fingerfood/style/style.css
+++ b/fingerfood/style/style.css
@@ -119,17 +119,18 @@ p {
 
 	
 	h1 {
-		size:4em;
+		font-size:4em;
 	}
 	
 	h2 {
-		size: 3em;
+		font-size: 3em;
 	}
 	
 	h3 {
-		size: 3em;
+		font-size: 3em;
 	}
+	
 	p {
-		3em;
+		font-size:6em;
 	}
 }
