--- a/fingerfood/style/style.css
+++ b/fingerfood/style/style.css
@@ -40,7 +40,7 @@ h2 {
 		color:#FF5181;
     font-family:"Karla", sans-serif;
 		font-size:2em;
-    margin:20px 0 20px 0;
+    margin:20px 0;
 		text-transform: capitalize;
 }
 
@@ -102,11 +102,11 @@ p {
 		border-radius: 8px;
 		box-shadow: 0px 10px 15px rgba(0,0,0,0.1);
 		display:block;
-    		margin:0 auto;
-		margin-bottom:60px;
-		left:0%;
+    margin:0 auto;
+		margin-bottom:180px;
+    left:0%;
 		position:relative;
-		width:100%;
+    width:100%;
 	}
 	
 	.img-small {
@@ -120,17 +120,22 @@ p {
 	
 	h1 {
 		font-size:4em;
+		line-height: 1.5em;
+		margin:240px 0 120px 0;
 	}
 	
 	h2 {
-		font-size: 3em;
+		font-size: 2.5em;
+		margin:60px 0;
 	}
 	
 	h3 {
-		font-size: 3em;
+		font-size: 1.5em;
+		margin-bottom:60px;
 	}
 	
 	p {
-		font-size:3em;
+		font-size:2em;
+		margin-bottom:120px;
 	}
 }
