--- a/css/style.css
+++ b/css/style.css
@@ -30,26 +30,26 @@ a:hover {
 header {
   background-color:rgb(255,255,255);
   display:block;
-  height:115px;
+  height:60px;
   margin:0 auto;
   position: relative;
 }
 	
 header #logo {
-  background:transparent url("../assets/global/logo_hulme_dark.png") no-repeat;
+  background:transparent url("../assets/global/logo_hulme_dark_v2.png") no-repeat;
   background-size: contain;
   display:block;
   height:60px;
   position:fixed;
-  width:168px;
+	top:0;
+  width:144px;
   left:3.5%;
-  top:25px;
 }
 
 header #logo a {
 	display:block;
-	height:54px;
-	width:150px;
+	height:60px;
+	width:144px;
 }
 
 nav {
@@ -58,16 +58,16 @@ nav {
   font-size:.9em;
   letter-spacing: .1em;
   position:absolute;
-  right:8%;
+  left:160px;
   text-transform: uppercase;
-  top:40px;
+	top:7px;
 }
 
 nav ul li {
   display:block;
   float:left;
-  margin-right:5px;
-  padding:10px;
+  margin-right:10px;
+  padding:20px 10px;
 }
 
 nav ul a {
@@ -90,7 +90,7 @@ a:hover {
 h1 {
   font-family: 'Karla', Helvetica, Arial, sans-serif;
   font-size:3.5em;
-  padding:40px 7% 20px 7%;
+  padding:20px 7%;
 }
 		
 section h2 {
@@ -98,7 +98,7 @@ section h2 {
   font-size:1.4em;
   font-weight:300;
   line-height:1.6em;
-  padding:0px 7% 80px 7%;
+  padding:0px 7%;
 }
 
 p {
@@ -107,17 +107,25 @@ p {
   padding:80px 30px;
 }
 
-#pdfPortfolio {
-  margin-bottom: 80px;
+#content img {
+	width:100%;
 }
 
-#pdfPortfolio a {
+#content .post {
+	margin:80px 0;
+}
+
+#introText {
+  margin:40px 0;
+}
+
+#introText a {
   background-color:rgb(245,255,0);
   color:#222222;
   /*text-decoration: underline;*/
 }
 
-#pdfPortfolio a:hover {
+#introText a:hover {
   background-color:rgb(235,245,0);
   color:#222222;
   /*text-decoration: underline;*/
@@ -143,7 +151,7 @@ p {
   column-gap: 4px;
 }
 
-.images img{
+.images img {
   display: inline-block;
   margin-bottom: 1px;
   width: 100%;
@@ -164,7 +172,7 @@ p {
   header {
       background-color:rgb(255,255,255);
       display:block;
-      height:120px;
+      height:60px;
       margin:0 auto;
       max-width:1100px;
   }
@@ -172,7 +180,7 @@ p {
   header #logo {
     left:3.5%;
     height:60px;
-    top: 28px;
+    top: 0;
     width:170px;
   }
 
@@ -182,8 +190,8 @@ p {
     width:220px;
   }
   
-  section h1 {
-    font-size:3.2em;
+  h1 {
+    font-size:2.2em;
     padding:30px 10% 0px 10%;
   }
 
@@ -191,8 +199,12 @@ p {
       font-size:1.4em;
       padding:20px 10% 40px 10%;
   }
-
-  section#content {
+	
+	#introText {
+		margin:20px 0 60px 0;
+	}
+	
+  section #content {
       background-color:rgb(255,255,255);
       max-width:1100px;
       margin:0 auto;
@@ -226,19 +238,32 @@ p {
   header #logo {
     left:2%;
     height:60px;
-    top: 15px;
+    top: 0;
     width:170px;
   }
   
+	h1 {
+		margin:0;
+	}
+	
+	nav {
+		left:150px;
+		top:6px;
+	}
+	
+	#introText {
+		margin:20px 0 60px 0;
+	}
+	
   section h1 {
     font-size:3em;
-    padding:10px 0 30px 0;
+    padding:40px 0 0 0;
   }
   
   section h2 {
     font-size:1.8em;
     line-height:1.2em;
-    padding:0 0 50px 0;
+    padding:20px 0;
   }
 
   #content .post {
